--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,18 @@
 language: node_js
 node_js:
   - "12"
-# before_install:
-#   - curl -o- -L https://yarnpkg.com/install.sh | bash -s
-#   - export PATH="$HOME/.yarn/bin:$PATH"
-# cache:
-#   yarn: true
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s
+  - export PATH="$HOME/.yarn/bin:$PATH"
+cache:
+  yarn: true
 install:
-  - node --version
-  - npm --version
-  - echo "npm install ..."
-  - npm install
-  - echo "npm install success."
+  - yarn
 before_script:
   - ''
 script:
-  - npm run test:unit
-
+  - yarn run lint
+  - yarn run test:unit
+  - yarn run build
 after_script:
   - echo "ci completed."
